# api_test_store

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: github_actions.yaml
blocks/registration/: api.py  model.py
common/: constants.py
endpoints_models/: app.py
endpoints_models/register/: api.py  model.py
fixtures/: application.py
tests/: conftest.py  test_register.py  test_true.py
tests/test_register/: test_register.py
tests/test_registration/: test_register.py
utils/: client.py  logger.py  request.py  validator.py
