[tool.poetry]
name = "api_tests_store"
version = "0.1.0"
description = "Api tests for store"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"
pydantic = "^1.9.2"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
vulture = "^2.5"
pre-commit-hooks = "^4.3.0"
Faker = "^14.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 70
paths = ["."]

# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "utils.logger.*",
    "utils.client.*",
    "utils.validator.*",
    "endpoints_models.*",

]
ignore_errors = true
